app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

 @keyframes kenburns {
  from {
    transform: scale(1);
  }

  to {
    transform: scale(1.08);
  }
}
 @keyframes grow {
  from {
    width: 0;
  }

  to {
    width: 180px;
  }
}
 @keyframes goldLine {
  from {
    width: 0;
  }

  to {
    width: 180px;
  }
}

@keyframes logoIn {
  from {
    opacity: 0;
    transform: scale(.8);
  }

  to {
    opacity: 1;
    transform: scale(1);
  }
}

@keyframes fadeUp {
  from {
    opacity: 0;
    transform: translateY(18px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}
body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}
html {
  scroll-behavior: smooth;
}

